# mal

./: .clang-tidy  .gitmodules  CMakeLists.txt
inc/mal/: context.hpp  env.hpp  list.hpp  parser.hpp  prompt.hpp  reader.hpp  str.hpp  types.hpp
src/: step0.cpp  step1.cpp  step2.cpp
src/cpp/: CMakeLists.txt  core.cpp  core.hpp  core7.hpp  core8.hpp  core9.hpp  coreA.hpp  env.cpp  env.hpp  eval.common.hpp  eval.fn.cpp  eval.fn.hpp  eval.hpp  eval.impl.cpp  eval.impl.hpp  eval.macro.cpp  eval.macro.hpp  eval.quasiquote.hpp  eval.specials.hpp  eval.trycatch.cpp  eval.trycatch.hpp  eval_ast.hpp  list.hpp  log.hpp  parser.hpp  printer.cpp  printer.hpp  prompt.hpp  reader.cpp  reader.hpp  rep.cpp  rep.hpp  step0.cpp  step1.cpp  step2.cpp  step3.cpp  step4.cpp  step5.cpp  step6.cpp  step7.cpp  (+7 more)
src/llvm/: CMakeLists.txt  context.cpp  context.hpp  core.cpp  core.hpp  gc_object.cpp  gc_object.hpp  main.cpp  parser.common.hpp  parser.core.hpp  parser.hpp  parser.wrap.cpp  parser.wrap.hpp  step0.cpp  step1.cpp  step2.cpp  string.cpp  string.hpp
src/llvm-ir/: CMakeLists.txt  reader.ll  step0.ll  step1.ll
src/ocaml/: CMakeLists.txt  dune  reader.ml  runner.sh  step1.ml  tokeniser.ml  types.ml
src/ocaml/lib/: core.ml  dune  env.ml  eval.ml  exc.ml  printer.ml  reader.ml  repl.ml  tokeniser.ml  types.ml
